--- a/.env-sample
+++ b/.env-sample
@@ -3,7 +3,8 @@ DOMAIN_LOCAL=www.example.local
 
 APP_DEBUG=false
 APP_WWW=false
-APP_WEB_ROOT=
+APP_WEBROOT=
+APP_CORE=
 
 DB_HOST=localhost
 DB_DATABASE=example
