--- a/.env-sample
+++ b/.env-sample
@@ -1,10 +1,11 @@
 DOMAIN_PRODUCTION=www.example.com
 DOMAIN_LOCAL=www.example.local
 
-APP_DEBUG=false
-APP_WWW=false
 APP_WEBROOT=
 APP_CORE=
+APP_DEBUG=false
+APP_WWW=false
+APP_SSL=false
 
 DB_HOST=localhost
 DB_DATABASE=example
