Updates to configs and files.

--- a/.env-sample
+++ b/.env-sample
@@ -1,7 +1,7 @@
 DOMAIN_PRODUCTION=www.example.com
 DOMAIN_LOCAL=www.example.local
 
-APP_WEBROOT=
+APP_DOCROOT=
 APP_CORE=
 APP_DEBUG=false
 APP_WWW=false
