--- a/.env-sample
+++ b/.env-sample
@@ -3,6 +3,7 @@ DOMAIN_LOCAL=www.example.local
 
 APP_DOCROOT=
 APP_CORE=
+APP_UPLOADS=/wp-content/uploads
 APP_DEBUG=false
 APP_WWW=false
 APP_SSL=false
