--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,15 @@
 {
 	"name": "scottjs/wp-dotenv",
+	"description": "Helper scripts to enable WordPress to use dotenv config files, similar to Laravel 5.",
+	"license": "MIT",
+	"authors": [
+		{
+			"name": "Scott Salisbury",
+			"email": "scottsalisbury@gmail.com"
+		}
+	],
 	"require": {
-        "vlucas/phpdotenv": "^2.2"
-    }
+		"vlucas/phpdotenv": "^2.2"
+	},
+	"minimum-stability": "dev"
 }
