Add new config variable to set environment type.
Update wp-config-sample.php to enable/disable the ability to upgrade software/plugins via the admin panel.

--- a/.env-sample
+++ b/.env-sample
@@ -1,8 +1,9 @@
 DOMAIN_REMOTE=www.example.com
 DOMAIN_LOCAL=www.example.local
 
-APP_DOCROOT=
-APP_CORE=
+APP_ENV=local
+APP_DOCROOT=/public
+APP_CORE=/wp
 APP_UPLOADS=/wp-content/uploads
 APP_DEBUG=false
 APP_WWW=false
